Fix title spacing

--- a/sass/_containers.scss
+++ b/sass/_containers.scss
@@ -71,10 +71,10 @@ body {
   }
   .title {
     font-size: 3em;
-    top: 190px;
+    top: 180px;
   }
   .copyright {
-    top: 200px;
+    top: 185px;
   }
   .play-icons {
     margin: 10px auto 0 auto;
