--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -740,11 +740,11 @@ body {
   /* line 72, ../sass/_containers.scss */
   .title {
     font-size: 3em;
-    top: 190px; }
+    top: 180px; }
 
   /* line 76, ../sass/_containers.scss */
   .copyright {
-    top: 200px; }
+    top: 185px; }
 
   /* line 79, ../sass/_containers.scss */
   .play-icons {
